Fixed the executor to pass securitycontext
Signed-off-by: Dhanendra Sahu <dhanendra.tech@gmail.com>